src/components/Clock/Clock.less
.clock-item {
    @width: 350px;

    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: @width;
    height: @width;
    font-size: 18px;
    line-height: 200%;
    border: 1px solid #00f;
    margin: 10px;
    .delete-icon {
        @length: 20px;

        position: absolute;
        top: @length;
        right: @length;
        width: @length;
        height: @length;
        line-height: @length;
        text-align: center;
        color: #666;
        &:hover {
            color: #333;
            // color: red;
            // 调成手指
            cursor: pointer;
        }
    }
    &:hover .delete-icon {
        visibility: visible !important;
    }
    .date {
        margin: 30px 0;
    }
}

